(subdir
 vendor/Modules
 (dirs :standard _*))

(subdir
 vendor/Lib
 (dirs :standard _*))

(rule
 (deps
  (source_tree vendor))
 (targets pyconfig.h libpython.a)
 (action
  (no-infer
   (progn
    (chdir
     vendor
     (setenv
      MACOSX_DEPLOYMENT_TARGET
      11.0
      (progn
       (run ./configure --enable-shared)
       (run make libpython3.11.a))))
    (copy vendor/libpython3.11.a libpython.a)
    (copy vendor/pyconfig.h pyconfig.h)))))

(library
 (name taglessFinal)
 (package pyre-ast)
 (libraries base)
 (foreign_stubs
  (language c)
  (names binding)
  (flags :standard -Ivendor/Include -I.))
 (c_library_flags
  -lpthread
  -lpython
  -lutil
  -L%{project_root}/_build/default/lib/taglessFinal/))
